# rMiniK8s

./: .dockerignore  .space.kts  Cargo.toml  README.md  rustfmt.toml
api_server/: Cargo.toml
api_server/src/: etcd.rs  main.rs
api_server/src/handler/: binding.rs  function.rs  gpu_job.rs  hpa.rs  ingress.rs  metrics.rs  mod.rs  node.rs  pod.rs  replica_set.rs  response.rs  service.rs  utils.rs  workflow.rs
assests/: Doc.pages
assets/: Doc.pages
controllers/: Cargo.toml
controllers/examples/dummy-controller/: main.rs
controllers/src/: main.rs
controllers/src/endpoints/: main.rs  utils.rs
controllers/src/endpoints-controller/: main.rs  utils.rs
controllers/src/function/: controller.rs  main.rs  utils.rs
controllers/src/gpu_job/: controller.rs  main.rs  utils.rs
controllers/src/ingress/: main.rs  nginx_ingress_config.rs  utils.rs
controllers/src/podautoscaler/: horizontal.rs  main.rs  metrics.rs  replica_calculator.rs  utils.rs
controllers/src/replica_set/: controller.rs  main.rs  utils.rs
examples/api-server/: config.yaml
examples/config/node/: node.env
examples/function/: .gitignore  README.md  handler.py  simple.yaml
examples/function/add/: simple.yaml
examples/function/minus3/: simple.yaml
examples/gpu-code/: Makefile  cuda.slurm  cuda_example.cu
examples/gpu-job/: gpu-job.yaml  gpuserver-config.yaml
examples/hpa/: README.md  replicaset.yaml  service.yaml  simple.yaml
examples/ingresses/: simple-ingress.yaml
examples/ingresses/nginx-httpd/: httpd-pod.yaml  httpd-service.yaml  mix.yaml  multiple-host-ingress.yaml  multiple-path-ingress.yaml  nginx-pod.yaml  nginx-service.yaml  tomcat-pod.yaml  tomcat-service.yaml
examples/node/: conf.env
examples/nodes/: labels.yaml  pod.yaml
examples/replicasets/: simple.yaml
examples/services/: simple-service.yaml
examples/workflow/: guess.yaml  hello-workflow.yaml
examples/workflow/guess/: README.md  guess.yaml
examples/workflow/guess/add/: handler.py
examples/workflow/guess/minus3/: handler.py  simple.yaml
examples/workflow/guess/right/: handler.py  simple.yaml
examples/workflow/guess/wrong/: handler.py  simple.yaml
resources/: Cargo.toml
resources/src/: controller.rs  lib.rs
resources/src/config/: kubelet.rs  mod.rs
resources/src/controller/: informer.rs  mod.rs  reflector.rs
resources/src/informer/: mod.rs  reflector.rs
resources/src/models/: etcd.rs  mod.rs
resources/src/objects/: binding.rs  function.rs  gpu_job.rs  hpa.rs  ingress.rs  metrics.rs  mod.rs  node.rs  object_reference.rs  pod.rs  replica_set.rs  service.rs  workflow.rs
resources/src/utils/: mod.rs
rkube-proxy/: Cargo.toml
rkube-proxy/src/: k8s_iptables.rs  main.rs  utils.rs
rkube_proxy/: Cargo.toml
rkube_proxy/src/: k8s_iptables.rs  main.rs  utils.rs
rkubectl/: Cargo.toml
rkubectl/src/: apply.rs  completion.rs  create.rs  delete.rs  describe.rs  exec.rs  get.rs  invoke.rs  logs.rs  main.rs  patch.rs  update.rs  utils.rs
rkubelet/: Cargo.toml
rkubelet/src/: api.rs  config.rs  docker.rs  main.rs  models.rs  node_status_manager.rs  pod.rs  pod_manager.rs  pod_worker.rs  status_manager.rs  volume.rs
scheduler/: Cargo.toml
scheduler/src/: cache.rs  informer.rs  main.rs  scheduler.rs
scheduler/src/algorithm/: dummy.rs  mod.rs  simple.rs
scripts/arm/: build.sh  build_images.sh  pull_images.sh
scripts/arm/docker/api_server/: Dockerfile
scripts/arm/docker/endpoints-controller/: Dockerfile
scripts/arm/docker/function-controller/: Dockerfile
scripts/arm/docker/function-controller/function_wrapper/: Dockerfile  server.py
scripts/arm/docker/gpujob-controller/: Dockerfile
scripts/arm/docker/ingress-controller/: Dockerfile
scripts/arm/docker/podautoscaler/: Dockerfile
scripts/arm/docker/replicaset-controller/: Dockerfile
scripts/arm/docker/scheduler/: Dockerfile
scripts/arm/docker/serverless-router/: Dockerfile
scripts/arm/local-dev/: .gitignore  coredns.service  daemon.example.json  down.sh  flanneld.service  prometheus.yml  up.sh
scripts/arm/master/: .gitignore  docker-compose.yaml  down.sh  prometheus.template.yml  up.sh
scripts/arm/master/dns/: Corefile  serverless_router.db.template
scripts/arm/node/: .gitignore  down.sh  down_master.sh  flanneld.service  rkubelet.service  rkubelet.yaml  rkubeproxy.service  up.sh  up_master.sh
scripts/docker/api_server/: Dockerfile
scripts/docker/ingress-controller/: Dockerfile
scripts/docker/podautoscaler/: Dockerfile
scripts/docker/rkubelet/: Dockerfile
scripts/docker/rust/: Dockerfile
scripts/docker/rust/dummy/: Cargo.toml
scripts/master/: .gitignore  daemon.json  deploy.sh  docker-compose.yaml  down.sh  prometheus.yml  rkubeproxy.service  up.sh
scripts/master/dns/: Corefile  function_router.db.template
scripts/multipass/: cloud-init-arm64.yaml  init.sh
scripts/node/: deploy.sh  flanneld.service  kdocker.service
scripts/x86/docker/endpoints-controller/: Dockerfile
scripts/x86/docker/function-controller/: Dockerfile
scripts/x86/docker/gpujob-controller/: Dockerfile
scripts/x86/docker/replicaset-controller/: Dockerfile
scripts/x86/docker/rust/: Dockerfile
scripts/x86/docker/rust/dummy/: Cargo.toml
scripts/x86/docker/scheduler/: Dockerfile
scripts/x86/docker/serverless-router/: Dockerfile
scripts/x86/local-dev/: down.sh  up.sh
scripts/x86/local-dev/dns/: ingress.db.template
scripts/x86/master/: docker-compose.yaml  down.sh  prometheus.yml  up.sh
scripts/x86/node/: rkubelet.service
serverless/: Cargo.toml
serverless/src/activator/: main.rs  utils.rs
serverless/src/function_ingress/: main.rs  nginx_config.rs  utils.rs
serverless/src/router/: main.rs  route.rs  utils.rs  workflow.rs
templates/function_wrapper/: server.py
