[package]
name = "api_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.56"
axum = { version = "0.5.1", features = ["ws", "multipart"] }
chrono = "0.4.19"
config = { version = "0.13.0", features = ["yaml"] }
etcd-client = "0.9.0"
lazy_static = "1.4.0"
prometheus-http-api = "0.2.0"
tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "1.0.136", features = ["derive"] }
deadpool = { version = "0.9.3", features = ["rt_tokio_1"] }
async-trait = "0.1.53"
tracing = "0.1.33"
tracing-subscriber = "0.3.10"
resources = { path = "../resources" }
serde_json = "1.0.79"
axum-macros = "0.2.0"
futures = "0.3.21"
uuid = { version = "0.8", features = ["v4"] }
rand = "0.8.5"
dashmap = "5.3.3"
tower-http = { version = "0.3.3", features = ["fs"] }
tokio-util = "0.7.2"
