[package]
edition = "2021"
name = "api_server"
version = "0.1.0"

[dependencies]
anyhow = "1.0.56"
async-trait = "0.1.53"
axum = {version = "0.5.1", features = ["ws", "multipart"]}
axum-macros = "0.2.0"
chrono = "0.4.19"
config = {version = "0.13.0", features = ["yaml"]}
dashmap = "5.3.3"
deadpool = {version = "0.9.3", features = ["rt_tokio_1"]}
etcd-client = "0.9.0"
futures = "0.3.21"
hyper = "0.14.18"
lazy_static = "1.4.0"
prometheus-http-api = "0.2.0"
rand = "0.8.5"
resources = {path = "../resources"}
reqwest = {version = "0.11"}
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
serde_yaml = "0.8.23"
tokio = {version = "1.17.0", features = ["full"]}
tokio-tungstenite = "0.17.1"
tokio-util = "0.7.2"
tower-http = {version = "0.3.3", features = ["fs"]}
tracing = "0.1.33"
tracing-subscriber = "0.3.10"
uuid = {version = "0.8", features = ["v4"]}
