[package]
name = "controllers"
version = "0.1.0"
edition = "2021"

[[example]]
name = "dummy-controller"

[[bin]]
name = "endpoints-controller"
path = "src/endpoints/main.rs"

[[bin]]
name = "replicaset-controller"
path = "src/replica_set/main.rs"

[dependencies]
config = { version = "0.13.1", features = ["yaml"] }
tokio = { version = "1.17.0", features = ["full"] }
resources = { path = "../resources" }
anyhow = { version = "1.0.56", features = ["backtrace"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio-tungstenite = "0.17.1"
tracing = "0.1.32"
tracing-subscriber = "0.3.10"
lazy_static = "1.4.0"
dotenv = "0.15.0"
