[package]
edition = "2021"
name = "controllers"
version = "0.1.0"

[[example]]
name = "dummy-controller"

[[bin]]
name = "endpoints-controller"
path = "src/endpoints/main.rs"

[[bin]]
name = "replicaset-controller"
path = "src/replica_set/main.rs"

[[bin]]
name = "ingress-controller"
path = "src/ingress/main.rs"

[[bin]]
name = "podautoscaler"
path = "src/podautoscaler/main.rs"

[[bin]]
name = "gpujob-controller"
path = "src/gpu_job/main.rs"

[[bin]]
name = "function-controller"
path = "src/function/main.rs"

[dependencies]
anyhow = {version = "1.0.56", features = ["backtrace"]}
chrono = "0.4.19"
config = {version = "0.13.1", features = ["yaml"]}
dotenv = "0.15.0"
fs_extra = "1.2.0"
futures-delay-queue = "0.5.2"
futures-intrusive = "0.4"
lazy_static = "1.4.0"
nginx-config = "0.13.2"
parking_lot = "0.12.0"
reqwest = {version = "0.11", features = ["blocking", "json"]}
resources = {path = "../resources"}
serde = { version = "1.0.136", features = ["derive"] }
tokio = {version = "1.17.0", features = ["full"]}
tokio-tungstenite = "0.17.1"
tracing = "0.1.32"
tracing-subscriber = "0.3.10"
