[package]
name = "resources"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"
strum = { version = "0.24", features = ["derive"] }
