[package]
name = "resources"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.12.0"
chrono = "0.4.19"
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"
serde_json = "1.0.79"
strum = { version = "0.24", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
etcd-client = "0.9.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
anyhow = { version = "1.0.56", features = ["backtrace"] }
tokio-tungstenite = "0.17.1"
tokio = { version = "1.17.0", features = ["full"] }
futures = "0.3.21"
futures-util = "0.3.21"
tracing = "0.1.32"
dashmap = "5.2.0"
