[package]
edition = "2021"
name = "resources"
version = "0.1.0"

[dependencies]
anyhow = {version = "1.0.56", features = ["backtrace"]}
axum = "0.5.1"
bollard = "0.12.0"
chrono = "0.4.19"
dashmap = "5.3.3"
enum_dispatch = "0.3.8"
etcd-client = "0.9.0"
futures = "0.3.21"
futures-util = "0.3.21"
indenter = "0.3.3"
rand = "0.8.5"
reqwest = {version = "0.11", features = ["blocking", "json"]}
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
serde_yaml = "0.8.23"
strum = {version = "0.24", features = ["derive"]}
tokio = {version = "1.17.0", features = ["full"]}
tokio-tungstenite = "0.17.1"
tracing = "0.1.32"
uuid = {version = "0.8", features = ["serde", "v4"]}
