[package]
name = "rkube-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iptables = "0.5.0"
anyhow = "1.0.56"
tracing = "0.1.33"
tracing-subscriber = "0.3.10"
resources = { path = "../resources" }
tokio = { version = "1.17.0", features = ["full"] }
dashmap = "5.3.3"
tokio-tungstenite = "0.17.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rand = "0.8.5"
lazy_static = "1.4.0"
dotenv = "0.15.0"
