[package]
edition = "2021"
name = "rkube-proxy"
version = "0.1.0"

[dependencies]
anyhow = "1.0.56"
dashmap = "5.3.3"
dotenv = "0.15.0"
iptables = "0.5.0"
lazy_static = "1.4.0"
rand = "0.8.5"
reqwest = {version = "0.11", features = ["blocking", "json"]}
resources = {path = "../resources"}
tokio = {version = "1.17.0", features = ["full"]}
tokio-tungstenite = "0.17.1"
tracing = "0.1.33"
tracing-subscriber = "0.3.10"
