[package]
edition = "2021"
name = "rkubectl"
version = "0.1.0"

[dependencies]
anyhow = "1.0.56"
chrono = "0.4.19"
chrono-humanize = "0.2.1"
clap = {version = "3.1.8", features = ["derive"]}
clap_complete = "3.1.4"
futures-util = "0.3.21"
lazy_static = "1.4.0"
reqwest = {version = "0.11", features = ["blocking", "json", "multipart"]}
resources = {path = "../resources"}
serde = {version = "1.0.136", features = ["derive"]}
serde_yaml = "0.8.23"
strum = "0.24.0"
serde_json = "1.0.81"
termion = "1.5.6"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.17.1"
