[package]
name = "rkubelet"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.56"
bollard = "0.12.0"
futures = "0.3"
lazy_static = "1.4.0"
resources = { path = "../resources" }
serde = "1.0.136"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.33"
tracing-subscriber = "0.3.10"
uuid = { version = "0.8", features = ["v4"] }