[package]
name = "rkubelet"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.0"
actix-rt = "2.7.0"
anyhow = "1.0.56"
bollard = "0.12.0"
clap = { version = "3.1.13", features = ["derive"] }
config = { version = "0.13.1", features = ["yaml"] }
dashmap = "5.2.0"
futures = "0.3"
lazy_static = "1.4.0"
resources = { path = "../resources" }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = "1.0.136"
serde_json = "1.0.79"
serde_yaml = "0.8.23"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.17.1"
tracing = "0.1.33"
tracing-subscriber = "0.3.10"
uuid = { version = "0.8", features = ["v4"] }
