[package]
edition = "2021"
name = "rkubelet"
version = "0.1.0"

[dependencies]
anyhow = "1.0.56"
bollard = "0.12.0"
chrono = "0.4.19"
clap = { version = "3.1.13", features = ["derive"] }
config = { version = "0.13.1", features = ["yaml"] }
futures = "0.3"
interfaces = "0.0.8"
lazy_static = "1.4.0"
reqwest = {version = "0.11", features = ["blocking", "json"]}
resources = {path = "../resources"}
serde = "1.0.136"
serde_json = "1.0.79"
serde_yaml = "0.8.23"
sysinfo = "0.23.12"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.17.1"
tracing = "0.1.33"
tracing-subscriber = "0.3.10"
uuid = {version = "0.8", features = ["v4"]}
