[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
resources = { path = "../resources" }
anyhow = { version = "1.0.56", features = ["backtrace"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio-tungstenite = "0.17.1"
tracing = "0.1.32"
tracing-subscriber = "0.3.10"
serde_json = "1.0.79"
