[package]
edition = "2021"
name = "scheduler"
version = "0.1.0"

[dependencies]
anyhow = {version = "1.0.56", features = ["backtrace"]}
dashmap = "5.3.3"
dotenv = "0.15.0"
lazy_static = "1.4.0"
reqwest = {version = "0.11", features = ["blocking", "json"]}
resources = {path = "../resources"}
serde_json = "1.0.79"
tokio = {version = "1.17.0", features = ["full"]}
tokio-tungstenite = "0.17.1"
tracing = "0.1.32"
tracing-subscriber = "0.3.10"
