[package]
edition = "2021"
name = "serverless"
version = "0.1.0"

[[bin]]
name = "serverless-router"
path = "src/router/main.rs"

[dependencies]
anyhow = {version = "1.0.56", features = ["backtrace"]}
dotenv = "0.15.0"
hyper = "0.14.18"
lazy_static = "1.4.0"
nginx-config = "0.13.2"
reqwest = {version = "0.11", features = ["blocking", "json"]}
resources = {path = "../resources"}
tokio = {version = "1.17.0", features = ["full"]}
tokio-tungstenite = "0.17.1"
tracing = "0.1.32"
tracing-subscriber = "0.3.10"
