[package]
edition = "2021"
name = "dummy"
version = "0.1.0"

[patch.crates-io]
bollard = {git = 'https://hub.fastgit.xyz/y-young/bollard'}

[dependencies]
anyhow = {version = "1.0.56", features = ["backtrace"]}
async-trait = "0.1.53"
axum = {version = "0.5.1", features = ["ws", "multipart"]}
axum-macros = "0.2.0"
bollard = "0.12.0"
chrono = "0.4.19"
chrono-humanize = "0.2.1"
clap = {version = "3.1.8", features = ["derive"]}
config = {version = "0.13.1", features = ["yaml"]}
dashmap = "5.3.3"
deadpool = {version = "0.9.3", features = ["rt_tokio_1"]}
dotenv = "0.15.0"
enum_dispatch = "0.3.8"
etcd-client = "0.9.0"
futures = "0.3.21"
futures-delay-queue = "0.5.2"
futures-intrusive = "0.4"
futures-util = "0.3.21"
iptables = "0.5.0"
lazy_static = "1.4.0"
nginx-config = "0.13.2"
parking_lot = "0.12.0"
prometheus-http-api = "0.2.0"
rand = "0.8.5"
reqwest = {version = "0.11", features = ["blocking", "json"]}
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
serde_yaml = "0.8.23"
strum = {version = "0.24", features = ["derive"]}
tokio = {version = "1.17.0", features = ["full"]}
tokio-tungstenite = "0.17.1"
tokio-util = "0.7.2"
tower-http = {version = "0.3.3", features = ["fs"]}
tracing = "0.1.32"
tracing-subscriber = "0.3.10"
uuid = {version = "0.8", features = ["serde", "v4"]}
